--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@floating-ui/react": "^0.27.4",
     "@tailwindcss/vite": "^4.0.7",
+    "esbuild": "^0.25.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-router": "^7.2.0",
+    "react-router-dom": "^7.6.3",
     "react-svg": "^16.3.0",
     "tailwind-merge": "^3.0.1",
     "tailwindcss": "^4.0.7"
