--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@floating-ui/react": "^0.27.4",
+    "@react-google-maps/api": "^2.20.7",
     "@tailwindcss/vite": "^4.0.7",
     "esbuild": "^0.25.5",
+    "maplibre-gl": "^5.6.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-draggable": "^4.5.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.2.0",
     "react-router-dom": "^7.6.3",
