--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@floating-ui/react": "^0.27.4",
     "@react-google-maps/api": "^2.20.7",
     "@tailwindcss/vite": "^4.0.7",
+    "lucide-react": "^0.525.0",
     "maplibre-gl": "^5.6.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
