--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router": "^7.2.0",
     "react-router-dom": "^7.6.3",
     "react-svg": "^16.3.0",
+    "sweetalert2": "^11.22.2",
     "tailwind-merge": "^3.0.1",
     "tailwindcss": "^4.0.7"
   },
@@ -29,7 +30,7 @@
     "@eslint/js": "^9.17.0",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
-    "@vitejs/plugin-react": "^4.3.4",
+    "@vitejs/plugin-react": "^4.7.0",
     "esbuild": "^0.25.6",
     "eslint": "^9.17.0",
     "eslint-plugin-react-hooks": "^5.0.0",
