--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@floating-ui/react": "^0.27.4",
     "@react-google-maps/api": "^2.20.7",
+    "@react-oauth/google": "^0.12.2",
     "@tailwindcss/vite": "^4.0.7",
     "axios": "^1.11.0",
     "esbuild": "^0.25.8",
@@ -24,6 +25,7 @@
     "react-router": "^7.2.0",
     "react-router-dom": "^7.6.3",
     "react-svg": "^16.3.0",
+    "recharts": "^3.1.2",
     "sweetalert2": "^11.22.2",
     "tailwind-merge": "^3.0.1",
     "tailwindcss": "^4.0.7"
